# pico-pimoroni-boilerplate

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
